--- a/execution/mapreduce/pom.xml
+++ b/execution/mapreduce/pom.xml
@@ -21,7 +21,7 @@ limitations under the License.
   <parent>
     <groupId>org.apache.sqoop</groupId>
     <artifactId>execution</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>1.99.1</version>
   </parent>
 
   <groupId>org.apache.sqoop.execution</groupId>
