SQOOP-760 Sqoop2: Invalid escape sequence in client resource file (Jarek Jarcec Cecho)

--- a/client/src/main/resources/client-resource.properties
+++ b/client/src/main/resources/client-resource.properties
@@ -156,7 +156,7 @@ show.prompt_version_client_server = @|bold {0} version:|@\n  Sqoop {1} \
 revision {2} \n  Compiled by {3} on {4}
 show.prompt_version_protocol = @|bold Protocol version:|@\n  {0}
 
-sqoop.shell_banner = @|green Sqoop Shell:|@ Type '@|bold help|@' or '@|bold \h|@' for help.
+sqoop.shell_banner = @|green Sqoop Shell:|@ Type '@|bold help|@' or '@|bold \\h|@' for help.
 sqoop.prompt_shell_loadrc = Loading resource file {0}
 sqoop.prompt_shell_loadedrc = Resource file loaded.
 
