SQOOP-526: Unable to resolve maven-scm-providers-standard
(Guido Serra aka Zeph via Jarek Jarcec Cecho)

--- a/ivy.xml
+++ b/ivy.xml
@@ -169,6 +169,7 @@ under the License.
 
     <exclude org="org.apache.hadoop" module="avro"/>
     <exclude org="commons-daemon" module="commons-daemon" />
+    <exclude type="pom" />
 
   </dependencies>
 </ivy-module>
