--- a/pom.xml
+++ b/pom.xml
@@ -184,6 +184,28 @@ limitations under the License.
         </dependencies>
       </dependencyManagement>
     </profile>
+
+    <!-- Sign profile for releasing artifacts to Nexus repository -->
+    <profile>
+      <id>sign</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-gpg-plugin</artifactId>
+            <executions>
+              <execution>
+                <phase>verify</phase>
+                <goals>
+                  <goal>sign</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+
   </profiles>
 
   <dependencyManagement>
