SQOOP-858: Add validation messages on form level
(Jarcec Cecho via Cheolsoo Park)

--- a/connector/connector-generic-jdbc/src/main/resources/generic-jdbc-connector-resources.properties
+++ b/connector/connector-generic-jdbc/src/main/resources/generic-jdbc-connector-resources.properties
@@ -18,7 +18,7 @@
 ############################
 # Connection Form
 #
-connection.label = Configuration configuration
+connection.label = Connection configuration
 connection.help = You must supply the information requested in order to \
                    create a connection object.
 
