SQOOP-873: Sqoop2 build should ignore Intellij files
(Hari Shreedharan via Jarek Jarcec Cecho)

--- a/pom.xml
+++ b/pom.xml
@@ -361,7 +361,7 @@ limitations under the License.
                   <exclude>.git/</exclude>
                   <exclude>.gitignore</exclude>
                   <exclude>.idea/</exclude>
-                  <exclude>*.iml</exclude>
+                  <exclude>**/*.iml</exclude>
                   <exclude>*.log</exclude>
                   <exclude>**/nb-configuration.xml</exclude>
                   <exclude>**.patch</exclude>
