--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,7 @@ limitations under the License.
     <maven.compile.target>1.6</maven.compile.target>
     <commons-dbcp.version>1.4</commons-dbcp.version>
     <commons-lang.version>2.5</commons-lang.version>
+    <commons-io.version>2.4</commons-io.version>
     <derby.version>10.8.2.2</derby.version>
     <hadoop.1.version>1.0.3</hadoop.1.version>
     <hadoop.2.version>2.0.2-alpha</hadoop.2.version>
@@ -101,6 +102,7 @@ limitations under the License.
     <junit.version>4.9</junit.version>
     <log4j.version>1.2.16</log4j.version>
     <servlet.version>2.5</servlet.version>
+    <cargo.version>1.3.2</cargo.version>
   </properties>
 
   <dependencies>
@@ -126,6 +128,13 @@ limitations under the License.
 
       <dependencyManagement>
         <dependencies>
+
+          <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>${commons-io.version}</version>
+          </dependency>
+
           <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
@@ -138,6 +147,13 @@ limitations under the License.
             <version>${hadoop.1.version}</version>
             <scope>provided</scope>
           </dependency>
+
+          <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-test</artifactId>
+            <version>${hadoop.1.version}</version>
+          </dependency>
+
         </dependencies>
       </dependencyManagement>
     </profile>
@@ -179,6 +195,12 @@ limitations under the License.
             <artifactId>hadoop-mapreduce-client-jobclient</artifactId>
             <version>${hadoop.2.version}</version>
             <scope>provided</scope>
+          </dependency>
+
+          <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-minicluster</artifactId>
+            <version>${hadoop.2.version}</version>
           </dependency>
 
         </dependencies>
@@ -310,6 +332,11 @@ limitations under the License.
         <artifactId>derby</artifactId>
         <version>${derby.version}</version>
       </dependency>
+      <dependency>
+        <groupId>org.codehaus.cargo</groupId>
+        <artifactId>cargo-core-container-tomcat</artifactId>
+        <version>${cargo.version}</version>
+      </dependency>
    </dependencies>
   </dependencyManagement>
 
@@ -325,6 +352,7 @@ limitations under the License.
     <module>execution</module>
     <module>submission</module>
     <module>dist</module>
+    <module>test</module>
   </modules>
 
   <build>
