--- a/build.xml
+++ b/build.xml
@@ -97,7 +97,7 @@
   <property environment="env"/>
   <property name="name" value="sqoop" />
   <property name="Name" value="Sqoop" />
-  <property name="version" value="1.4.3-SNAPSHOT" />
+  <property name="version" value="1.4.3" />
 
   <!-- The last version released. -->
   <property name="oldversion" value="1.4.2" />
