--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,9 @@ limitations under the License.
     <log4j.version>1.2.16</log4j.version>
     <servlet.version>2.5</servlet.version>
     <cargo.version>1.3.2</cargo.version>
+    <tomcat.major.version>6</tomcat.major.version>
+    <tomcat.minor.version>0.36</tomcat.minor.version>
+    <tomcat.version>${tomcat.major.version}.${tomcat.minor.version}</tomcat.version>
   </properties>
 
   <dependencies>
