SQOOP-918: Introduce client API and change Sqoop shell to use it
(Jarcec Cecho via Cheolsoo Park)

--- a/client/src/main/resources/client-resource.properties
+++ b/client/src/main/resources/client-resource.properties
@@ -26,8 +26,9 @@ object-name.help = Non unique name of the entity to help you remember \
 #############################
 # Messages
 #
-#  Missing args
+# Argument related
 #
+args.function.unknown = The specified function "{0}" is not recognized.
 args.xid_missing = Required argument --xid is missing.
 args.jid_missing = Required argument --jid is missing.
 args.cid_missing = Required argument --cid is missing.
