SQOOP-947: Sqoop2: Introduce the concept of "sensitivity" input to all supported metadata structures
(Abraham Elmahrek via Jarek Jarcec Cecho)

--- a/client/src/main/resources/client-resource.properties
+++ b/client/src/main/resources/client-resource.properties
@@ -182,7 +182,7 @@ formdisplayer.label = Label
 formdisplayer.help = Help
 formdisplayer.input = Input
 formdisplayer.type = Type
-formdisplayer.mask = Mask
+formdisplayer.sensitive = Sensitive
 formdisplayer.size = Size
 formdisplayer.possible_values = Possible values
 formdisplayer.unsupported_datatype = Unsupported data type
