SQOOP-647: Provide facility to cache server responses on client side
(Jarek Jarcec Cecho via Kate Ting)

--- a/client/pom.xml
+++ b/client/pom.xml
@@ -32,6 +32,11 @@ limitations under the License.
   <name>Sqoop Client</name>
 
   <dependencies>
+     <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-all</artifactId>
+      <scope>test</scope>
+    </dependency>
     <dependency>
       <groupId>org.apache.sqoop</groupId>
       <artifactId>sqoop-common</artifactId>
