--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,7 @@ limitations under the License.
     <guava.version>11.0.2</guava.version>
     <json-simple.version>1.1</json-simple.version>
     <junit.version>4.9</junit.version>
+    <mockito.version>1.9.5</mockito.version>
     <log4j.version>1.2.16</log4j.version>
     <servlet.version>2.5</servlet.version>
     <cargo.version>1.3.2</cargo.version>
@@ -374,6 +375,12 @@ limitations under the License.
         <artifactId>sqljdbc4</artifactId>
         <version>${jdbc.sqlserver.version}</version>
       </dependency>
+     <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-all</artifactId>
+      <version>${mockito.version}</version>
+      <scope>test</scope>
+    </dependency>
    </dependencies>
   </dependencyManagement>
 
