--- a/submission/pom.xml
+++ b/submission/pom.xml
@@ -21,7 +21,7 @@ limitations under the License.
   <parent>
     <groupId>org.apache</groupId>
     <artifactId>sqoop</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>1.99.2</version>
   </parent>
 
   <groupId>org.apache.sqoop</groupId>
