SQOOP-1053: Fix sqoop to work with Hadoop 2.0.4 alpha
(Venkat Ranganathan via Jarek Jarcec Cecho)

--- a/build.xml
+++ b/build.xml
@@ -76,15 +76,15 @@
     <elseif>
       <equals arg1="${hadoopversion}" arg2="200" />
       <then>
-        <property name="hadoop.version" value="2.0.0-alpha" />
+        <property name="hadoop.version" value="2.0.4-alpha" />
         <property name="hbase.version" value="0.94.2" />
         <property name="zookeeper.version" value="3.4.2" />
-        <property name="hadoop.version.full" value="2.0.0-alpha" />
+        <property name="hadoop.version.full" value="2.0.4-alpha" />
       </then>
     </elseif>
 
     <else>
-      <fail message="Unrecognized hadoopversion. Can only be 20, 23, 100, or 200." />
+      <fail message="Unrecognized hadoopversion. Can only be 20, 23, 100 or 200." />
     </else>
   </if>
 
