SQOOP-1028: Remove poll timeout parameter from Sqoop shell synchronous submission
(Mengwei Ding via Jarek Jarcec Cecho)

--- a/client/src/main/resources/client-resource.properties
+++ b/client/src/main/resources/client-resource.properties
@@ -107,6 +107,7 @@ set.usage = Usage: set {0}
 set.prompt_opt_name = Client option name
 set.prompt_opt_value = New option value
 set.verbose_changed = Verbose option was changed to {0}
+set.poll_timeout_changed = Poll timeout option has been changed to {0}
 set.unknown_opt_ignored = Unknown option {0}. Ignoring...
 set.host_description = Host name to invoke server resources
 set.port_description = Port number to invoke server resources
