SQOOP-973: Sqoop2: Merge host, port and app to single server URL in Sqoop shell
(Mengwei Ding via Jarek Jarcec Cecho)

--- a/client/src/main/resources/client-resource.properties
+++ b/client/src/main/resources/client-resource.properties
@@ -112,8 +112,10 @@ set.unknown_opt_ignored = Unknown option {0}. Ignoring...
 set.host_description = Host name to invoke server resources
 set.port_description = Port number to invoke server resources
 set.webapp_description = Web app to invoke server resources
+set.url_description = Url to invoke server resources
 set.server_usage = Usage: set server
 set.server_successful = Server is set successfully
+set.server_ignored = --host, --port or --webapp option is ignored, because --url option is given.
 
 
 show.usage = Usage: show {0}
