--- a/build.xml
+++ b/build.xml
@@ -38,8 +38,8 @@
       <echo message="Use Hadoop ${hadoopversion}" />
     </then>
     <else>
-      <echo message="Use Hadoop 0.23 by default" />
-      <property name="hadoopversion" value="23" />
+      <echo message="Use Hadoop 2.x by default" />
+      <property name="hadoopversion" value="200" />
     </else>
   </if>
 
