--- a/execution/mapreduce/pom.xml
+++ b/execution/mapreduce/pom.xml
@@ -51,8 +51,8 @@ limitations under the License.
 
   </dependencies>
 
-  <!-- Add classifier name to the JAR name -->
   <build>
+    <!-- Add classifier name to the JAR name -->
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -62,6 +62,20 @@ limitations under the License.
           <classifier>hadoop${hadoop.profile}</classifier>
         </configuration>
       </plugin>
+
+      <!--
+        Propagate our build directory to the tests
+      -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <systemPropertyVariables>
+            <maven.build.directory>${project.build.directory}</maven.build.directory>
+          </systemPropertyVariables>
+        </configuration>
+      </plugin>
+
     </plugins>
   </build>
 
