--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,7 @@ limitations under the License.
     <jdbc.oracle.version>11.2.0.3</jdbc.oracle.version>
     <jdbc.sqlserver.version>4.0</jdbc.sqlserver.version>
     <jdbc.teradata.version>14.00.00.21</jdbc.teradata.version>
+    <jdbc.netezza.version>6.0</jdbc.netezza.version>
   </properties>
 
   <dependencies>
@@ -385,6 +386,11 @@ limitations under the License.
         <groupId>com.teradata</groupId>
         <artifactId>terajdbc4</artifactId>
         <version>${jdbc.teradata.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.ibm.netezza</groupId>
+        <artifactId>nzjdbc3</artifactId>
+        <version>${jdbc.netezza.version}</version>
       </dependency>
      <dependency>
       <groupId>org.mockito</groupId>
