Adding patch-process to RAT ignore

--- a/pom.xml
+++ b/pom.xml
@@ -454,6 +454,7 @@ limitations under the License.
                   <exclude>*.log</exclude>
                   <exclude>**/nb-configuration.xml</exclude>
                   <exclude>**.patch</exclude>
+                  <exclude>patch-process/*</exclude>
                 </excludes>
               </configuration>
             </execution>
