SQOOP-1073: Sqoop2: Introduce schema for transferred data
 (Jarek Jarcec Cecho via Venkat Ranganathan)

--- a/client/src/main/resources/client-resource.properties
+++ b/client/src/main/resources/client-resource.properties
@@ -171,7 +171,6 @@ sqoop.prompt_shell_loadedrc = Resource file loaded.
 
 submission.usage = Usage: submission {0}
 submission.prompt_synchronous = Wait for submission to finish
-submission.prompt_poll_timeout = How often the client should communicate with the server in milliseconds (Default: 10000)
 
 # Various Table headers
 table.header.id = Id
@@ -212,3 +211,5 @@ submission.progress_not_available = Progress is not available
 submission.counters = Counters
 submission.executed_success = Job executed successfully
 submission.server_url = Server URL
+submission.connector_schema = Connector schema
+submission.hio_schema = Input/Output schema
