--- a/client/src/main/resources/client-resource.properties
+++ b/client/src/main/resources/client-resource.properties
@@ -169,8 +169,12 @@ sqoop.shell_banner = @|green Sqoop Shell:|@ Type '@|bold help|@' or '@|bold \\h|
 sqoop.prompt_shell_loadrc = Loading resource file {0}
 sqoop.prompt_shell_loadedrc = Resource file loaded.
 
-submission.usage = Usage: submission {0}
-submission.prompt_synchronous = Wait for submission to finish
+start.usage = Usage: start {0}
+start.prompt_synchronous = Wait for submission to finish
+
+stop.usage = Usage: stop  {0}
+
+status.usage = Usage: status {0}
 
 # Various Table headers
 table.header.id = Id
