SQOOP-1123: Sqoop2: Add eclipse project metadata folder excluded from maven
(Mengwei Ding via Jarek Jarcec Cecho)

--- a/pom.xml
+++ b/pom.xml
@@ -455,6 +455,7 @@ limitations under the License.
                   <exclude>**/nb-configuration.xml</exclude>
                   <exclude>**.patch</exclude>
                   <exclude>patch-process/*</exclude>
+                  <exclude>.metadata/</exclude>
                 </excludes>
               </configuration>
             </execution>
